feat: Support direct HuggingFace model paths
- ModelLoader now accepts any HuggingFace model path (e.g., mlx-community/gpt-oss-20b-MXFP4-Q8)
- Falls back to direct HuggingFace download if model not in registry
- Updated .env.example with gpt-oss-20b model as default
- Created .env with proper configuration for gpt-oss-20b

This allows using any MLX model from HuggingFace without requiring it to be
in the registry first.

--- a/.env.example
+++ b/.env.example
@@ -6,12 +6,16 @@
 # ============================================================================
 
 # Model variant to load
-# Options: gpt-j-20b, gpt-neox-20b
-MODEL_NAME=gpt-j-20b
+# Options:
+#   - phi-3-mini (recommended for M1 8GB - 2.5GB)
+#   - mistral-7b (requires 4GB+)
+#   - mlx-community/gpt-oss-20b-MXFP4-Q8 (full HuggingFace path)
+# You can use any MLX model from HuggingFace by specifying the full path
+MODEL_NAME=mlx-community/gpt-oss-20b-MXFP4-Q8
 
 # Optional: Override HuggingFace model path
-# Leave empty to use default path for MODEL_NAME
-MODEL_PATH=/models
+# Leave empty to use MODEL_NAME as the HuggingFace path
+# MODEL_PATH=
 
 # Quantization level for memory optimization
 # Options: int4, int8, fp16, none
