feat: Configure model download directory to project models/
- Set HF_HOME to /tkr-gpt-oss-20b/models in .env
- Created models/ directory for local model cache
- Updated .env.example with HF_HOME documentation
- Added models/ to .gitignore to prevent committing large model files

Models will now download to the project directory instead of ~/.cache/huggingface

--- a/.env
+++ b/.env
@@ -10,6 +10,10 @@ LAZY_LOAD=true
 WARMUP=false
 TRUST_REMOTE_CODE=true
 
+# HuggingFace Cache Directory (where models are downloaded)
+# This sets the cache to /Volumes/tkr-riffic/@tkr-projects/tkr-gpt-oss-20b/models
+HF_HOME=/Volumes/tkr-riffic/@tkr-projects/tkr-gpt-oss-20b/models
+
 # Inference Configuration
 TEMPERATURE=0.7
 TOP_P=0.9
