--- a/.env.example
+++ b/.env.example
@@ -118,6 +118,11 @@ MULTILINE_INPUT=true
 # Options: DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL=INFO
 
+# HuggingFace cache directory for downloaded models
+# Set this to store models in your project instead of ~/.cache/huggingface
+# Example: HF_HOME=/Volumes/tkr-riffic/@tkr-projects/tkr-gpt-oss-20b/models
+# HF_HOME=
+
 # MLX device selection override (usually auto-detected)
 # MLX_DEVICE=gpu
 
