fix: Use relative path for HF_HOME instead of absolute
Changed HF_HOME from absolute path to relative './models' path.
This makes the configuration portable across different machines and environments.

--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ WARMUP=false
 TRUST_REMOTE_CODE=true
 
 # HuggingFace Cache Directory (where models are downloaded)
-# This sets the cache to /Volumes/tkr-riffic/@tkr-projects/tkr-gpt-oss-20b/models
-HF_HOME=/Volumes/tkr-riffic/@tkr-projects/tkr-gpt-oss-20b/models
+# Using relative path - models will be stored in ./models directory
+HF_HOME=./models
 
 # Inference Configuration
 TEMPERATURE=0.7
