--- a/.env.example
+++ b/.env.example
@@ -120,8 +120,10 @@ LOG_LEVEL=INFO
 
 # HuggingFace cache directory for downloaded models
 # Set this to store models in your project instead of ~/.cache/huggingface
-# Example: HF_HOME=/Volumes/tkr-riffic/@tkr-projects/tkr-gpt-oss-20b/models
-# HF_HOME=
+# Relative path: HF_HOME=./models (stores in project/models directory)
+# Absolute path: HF_HOME=/path/to/models
+# Leave commented to use default: ~/.cache/huggingface
+# HF_HOME=./models
 
 # MLX device selection override (usually auto-detected)
 # MLX_DEVICE=gpu
