Update .gitignore for Python project artifacts
Add exclusions for:
- Python cache (__pycache__, *.pyc, *.pyo, *.pyd)
- Chat history (.chat_history/)
- Virtual environment (.venv/, venv/)

This prevents committing generated files and local development artifacts.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,16 @@
 models/
 *.bin
 *.safetensors
+
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Chat history
+.chat_history/
+
+# Virtual environment
+.venv/
+venv/
