Expand .gitignore with environment and IDE exclusions
Add exclusions for:
- .env (local environment configuration with API keys and paths)
- IDE files (.vscode/, .idea/, vim swap files)
- OS files (.DS_Store, Thumbs.db)

This ensures sensitive configuration and editor-specific files
are not committed to the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 
+# Environment configuration
+.env
+
 # Model cache directory
 models/
 *.bin
@@ -16,3 +19,14 @@ __pycache__/
 # Virtual environment
 .venv/
 venv/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
