--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "rich>=13.7.0",
     "prompt-toolkit>=3.0.43",
     "python-dotenv>=1.0.0",
+    "openai-harmony>=0.1.0",
     "pyyaml>=6.0.1",
 ]
 
